Trying to fix dark mode switch on mobile | Commit 2

--- a/site/styles/base.scss
+++ b/site/styles/base.scss
@@ -39,29 +39,29 @@
   --100vh: calc(100vh - var(--scrollbar-width));
 }
 
-[data-theme="dark"] {
-  --primary: #000000;
-  --primary-2: #111;
-  --secondary: #ffffff;
-  --secondary-2: #f1f3f5;
-  --hover: rgba(255, 255, 255, 0.075);
-  --hover-1: rgba(255, 255, 255, 0.15);
-  --hover-2: rgba(255, 255, 255, 0.25);
-  --selection: var(--purple);
-  --text-base: white;
-  --text-primary: white;
-  --text-secondary: black;
-  --accent-9: #fff;
-  --accent-8: #fafafa;
-  --accent-7: #eaeaea;
-  --accent-6: #999999;
-  --accent-5: #888888;
-  --accent-4: #666666;
-  --accent-3: #444444;
-  --accent-2: #333333;
-  --accent-1: #111111;
-  --accent-0: #000;
-}
+// [data-theme="dark"] {
+//   --primary: #000000;
+//   --primary-2: #111;
+//   --secondary: #ffffff;
+//   --secondary-2: #f1f3f5;
+//   --hover: rgba(255, 255, 255, 0.075);
+//   --hover-1: rgba(255, 255, 255, 0.15);
+//   --hover-2: rgba(255, 255, 255, 0.25);
+//   --selection: var(--purple);
+//   --text-base: white;
+//   --text-primary: white;
+//   --text-secondary: black;
+//   --accent-9: #fff;
+//   --accent-8: #fafafa;
+//   --accent-7: #eaeaea;
+//   --accent-6: #999999;
+//   --accent-5: #888888;
+//   --accent-4: #666666;
+//   --accent-3: #444444;
+//   --accent-2: #333333;
+//   --accent-1: #111111;
+//   --accent-0: #000;
+// }
 
 *,
 *:before,
@@ -74,7 +74,6 @@ body {
   height: 100%;
   box-sizing: border-box;
   touch-action: manipulation;
-  background: white !important;
   // font-family: var(--font-sans);
   // text-rendering: optimizeLegibility;
   // -webkit-font-smoothing: antialiased;
@@ -88,6 +87,7 @@ body {
   position: relative;
   min-height: 100%;
   margin: 0;
+  background: teal;
 }
 
 a {
